# guayaba

./: .gitignore  .gitmodules  Cargo.toml  README.md  addresses  cdloop  conditional_branch_delay_slot  conditional_branch_delay_slot.rs  jit.rs  jit_abi  log  x64.rs
src/: cd.rs  common.rs  cop0.rs  del.rs  dma.rs  frag.glsl  gpu.rs  gte.rs  interpreter.rs  main.rs  memory.rs  r3000.rs  register.rs  runnable.rs  scratch  screen.rs  trap  vert.glsl
src/caching_interpreter/: block.rs  insn.rs  insn_ir.rs  jumps.rs  mod.rs  opcodes.rs  optimize.rs  optimized_stubs.rs  stub.rs
src/console/: cd.rs  cop0.rs  dma.rs  gte.rs  handle_dma.rs  mod.rs  r3000.rs
src/console/gpu/: command.rs  gp0.rs  gp1.rs  mod.rs
src/console/memory/: ioports.rs  mod.rs
src/console/screen/: mod.rs  shader.rs  vert.glsl
src/dummy_jit/: insn_ir.rs  jumps.rs  mod.rs  opcodes.rs  optimize.rs
src/gpu/: command.rs  gp0.rs  gp1.rs  mod.rs
src/interpreter/: dma.rs  handle_dma.rs  mod.rs  opcodes.rs
src/jit/: handle_dma.rs  insn.rs  jit_fn.rs  jumps.rs  mod.rs  opcodes.rs  scratch
src/jit/caching_interpreter/: block.rs  mod.rs  optimized_stubs.rs  stub.rs  stubs.rs
src/jit/macro_assembler/: mod.rs
src/jit/x64_jit/: assembler.rs  block.rs  dynarec.rs  macro_assembler.rs  r.rs  (+6 more)
src/macro_assembler/: mod.rs
src/memory/: ioports.rs  mod.rs
src/old/: insn_ir.rs  jumps.rs  mod.rs  opcodes.rs  optimize.rs
src/screen/: frag.glsl  mod.rs  shader.rs  triangle.vert  vert.glsl
src/x64_jit/: block.rs  insn.rs  insn_ir.rs  jumps.rs  mod.rs  opcodes.rs  optimize.rs  optimized_stubs.rs  stub.rs
(+24 files in other folders)
