[package]
name = "guayaba"
version = "0.1.0"
authors = ["Ayrton <a.munoz3327@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.33.0"
gl = "0.10.0"
memmap = "0.7.0"
rand = "0.7.3"
jam = { path = "../jam" }

[profile.release]
debug = true
